fixed overlapping issue

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
     font-size: 15px;
     letter-spacing: 0.12em;
     color: var(--text-soft);
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     text-transform: uppercase;
     font-family: 'Winkle', 'sans-serif';
     transition: color 1s ease;
